# moneymq

./: .gitignore  Cargo.toml  README.md
.cargo/: Config.toml
.github/workflows/: ci.yaml  release.yaml
crates/cli/: Cargo.toml
crates/cli/src/: init.rs  main.rs  manifest.rs  run.rs  yaml_util.rs
crates/cli/src/catalog/: examples.rs  fetch.rs  loader.rs  mod.rs  sync.rs
crates/cli/src/catalog/examples/weather/: service.yaml
crates/cli/src/catalog/examples/weather/variants/: enterprise.yaml  pro.yaml  starter.yaml
crates/cli/src/cloud/: auth.rs  callback.html  login.rs  mod.rs
crates/cli/src/iac/: lint.rs  mod.rs  sync.rs
crates/cli/src/manifest/: environments.rs  mod.rs  payments.rs  x402.rs
crates/cli/src/service/: mod.rs  run.rs  sandbox.rs
crates/core/: Cargo.toml
crates/core/src/: events.rs  lib.rs
crates/core/src/api/: mod.rs
crates/core/src/api/catalog/: middleware.rs  mod.rs
crates/core/src/api/catalog/db/: mod.rs  schema.rs
crates/core/src/api/catalog/db/migrations/0_create_catalog_schema/: down.sql  up.sql
crates/core/src/api/catalog/db/models/: mod.rs  price.rs  product.rs
crates/core/src/api/catalog/stripe/: mod.rs  utils.rs
crates/core/src/api/catalog/stripe/endpoints/: billing.rs  checkout_sessions.rs  customers.rs  mod.rs  payment_intents.rs  payment_methods.rs  prices.rs  products.rs  subscriptions.rs
crates/core/src/api/catalog/stripe/iac/: account.rs  meters.rs  mod.rs  prices.rs  products.rs
crates/core/src/api/catalog/stripe/types/: billing.rs  checkout_sessions.rs  common.rs  customers.rs  mod.rs  payment_intents.rs  payment_methods.rs  prices.rs  products.rs  subscriptions.rs
crates/core/src/api/payment/: mod.rs
crates/core/src/api/payment/db/: mod.rs  schema.rs
crates/core/src/api/payment/db/migrations/0_create_db_schema/: down.sql
crates/core/src/api/payment/db/migrations/1_add_payment_hash/: down.sql
crates/core/src/api/payment/db/migrations/2_add_facilitator_context/: down.sql  up.sql
crates/core/src/api/payment/db/migrations/2_add_transaction_id/: down.sql  up.sql
crates/core/src/api/payment/db/migrations/3_add_event_streams/: down.sql  up.sql
crates/core/src/api/payment/db/models/: cloud_event.rs  event_stream.rs  facilitated_transaction.rs  mod.rs  transaction_customer.rs
crates/core/src/api/payment/endpoints/: channels.rs  config.rs  events.rs  jwt.rs  middleware.rs  mod.rs  settle.rs  supported.rs  verify.rs
crates/core/src/api/payment/endpoints/admin/: mod.rs  transactions.rs
crates/core/src/api/payment/networks/: solana.rs
crates/core/src/api/sandbox/: accounts.rs  config.rs  mod.rs
crates/core/src/billing/: currency.rs  mod.rs  recipient.rs
crates/core/src/catalog/: config.rs  mod.rs
crates/core/src/catalog/stripe/endpoints/: billing.rs  customers.rs  mod.rs  payment_intents.rs  payment_methods.rs  prices.rs  products.rs  subscriptions.rs
crates/core/src/catalog/stripe/iac/: common.rs
crates/core/src/catalog/stripe/types/: billing.rs  customers.rs  mod.rs  payment_intents.rs  products.rs  subscriptions.rs
crates/core/src/catalog/x402/endpoints/: accounts.rs  transactions.rs
crates/core/src/facilitator/: mod.rs
crates/core/src/facilitator/db/: mod.rs  schema.rs
crates/core/src/facilitator/db/migrations/0_create_db_schema/: up.sql
crates/core/src/facilitator/db/migrations/1_add_payment_hash/: up.sql
crates/core/src/facilitator/db/models/: facilitated_transaction.rs  mod.rs  transaction_customer.rs
crates/core/src/facilitator/endpoints/: health.rs  middleware.rs  mod.rs  settle.rs  supported.rs  transactions.rs  verify.rs
crates/core/src/facilitator/endpoints/admin/: transactions.rs
crates/core/src/facilitator/endpoints/sandbox/: accounts.rs  mod.rs
crates/core/src/facilitator/networks/: solana.rs
crates/core/src/gateway/: mod.rs
crates/core/src/gateway/endpoints/sandbox/: accounts.rs  mod.rs
crates/core/src/provider/: config.rs  mod.rs
crates/core/src/provider/stripe/: mod.rs  utils.rs
crates/core/src/provider/stripe/endpoints/: billing.rs  customers.rs  mod.rs  payment_methods.rs  prices.rs  products.rs  subscriptions.rs
crates/core/src/provider/stripe/iac/: account.rs  meters.rs  prices.rs  products.rs
crates/core/src/provider/stripe/types/: common.rs  mod.rs  payment_methods.rs
crates/core/src/provider/x402/: mod.rs
crates/core/src/provider/x402/endpoints/: accounts.rs  transactions.rs
crates/core/src/taxes/: data.yaml  mod.rs
crates/core/src/validator/: mod.rs  surfnet_utils.rs
crates/core/src/wallet/: mod.rs
crates/drivers/kit/: Cargo.toml
crates/drivers/stripe/: Cargo.toml
crates/drivers/stripe/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  scaffold.rs  yaml_util.rs
crates/mcp/src/moneymq/: mod.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: actor.rs  error.rs  lib.rs  processor.rs  reader.rs  types.rs
crates/stream/: Cargo.toml
crates/stream/src/: cursor.rs  lib.rs  path_encoding.rs  server.rs  store.rs  types.rs
crates/studio/: Cargo.toml  build.rs
crates/studio/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: accounts.rs  actors.rs  iac.rs  lib.rs  stripe.rs  x402.rs
crates/types/src/x402/: currency.rs  mod.rs  recipient.rs  transactions.rs
crates/types/src/x402/config/: constants.rs  facilitator.rs  mod.rs  server.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: lib.rs
crates/wallet/src/test/: mod.rs  remote_signer.rs
examples/surfpool/: .env.example  Money.toml  README.md  billing.yaml  moneymq.yaml  package-lock.json  package.json
examples/surfpool/billing/catalog/: 7uBgzNVzbkVuYgyHy9jBFx.yaml  FWRtjefXzCx5jizEKXTK53.yaml  GQhhWzRzLpTSGgzCrbwLb2.yaml  MZ3JK43A23siajET2BxTYJ.yaml
examples/surfpool/catalog/: FWRtjefXzCx5jizEKXTK53.yaml  GQhhWzRzLpTSGgzCrbwLb2.yaml  MZ3JK43A23siajET2BxTYJ.yaml
examples/surfpool/src/: index.ts
examples/surfpool/src/moneymq/: index.ts  (+2 more)
examples/x402/: .env.example  README.md  package-lock.json  package.json
examples/x402/api/: package.json  pnpm-lock.yaml
examples/x402/client/: package-lock.json  package.json  pnpm-lock.yaml
(+14 files in other folders)
