
[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/drivers/kit",
    "crates/drivers/stripe",
    "crates/mcp",
    "crates/types",
]
exclude = ["examples/*"]
default-members = ["crates/cli"]
resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2024"
description = "MoneyMQ is ..."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/txtx/moneymq"
keywords = ["payments"]
categories = ["payments"]

[workspace.dependencies]
axum-core = { version = "0.5.5" }
clap = { version = "4.5.51", default-features = false }
clap_complete = { version = "4.5.60", default-features = false }
convert_case = "0.9.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = "1"
url = { version = "2.5", features = ["serde"] }

# Solana deps
solana-client = "3.0.8"
solana-commitment-config = { version = "3.0.0", default-features = false }
solana-keypair = "3.0.1"
spl-token-2022-interface = { version = "2.0.0", default-features = false }
spl-token-interface = { version = "2.0.0", default-features = false }

[patch.crates-io]
