
[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/drivers/kit",
    "crates/drivers/stripe",
    "crates/mcp",
    "crates/sdk",
    "crates/stream",
    "crates/studio",
    "crates/types",
]
exclude = ["examples/*"]
default-members = ["crates/cli"]
resolver = "2"
[workspace.package]
version = "0.1.2"
edition = "2024"
description = "MoneyMQ"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/txtx/moneymq"
keywords = ["payments"]
categories = ["payments"]

[workspace.dependencies]
axum = "0.8"
convert_case = "0.9.0"
crossbeam = "0.8.4"
crossbeam-channel = { version = "0.5.15", default-features = false }
reqwest = { version = "0.12", default-features = false }
schemars = { version = "1.1", features = ["indexmap2"] }
serde = "1.0"
serde_json = "1.0"
serde_yml = "0.0.12"
surfpool-core = { git = "https://github.com/txtx/surfpool.git", branch = "feat/snapshot-events", default-features = false }
surfpool-types = { git = "https://github.com/txtx/surfpool.git", branch = "feat/snapshot-events", default-features = false }
thiserror = "2.0"
tokio = "1"
url = { version = "2.5", features = ["serde"] }
sha2 = "0.10"

# Solana deps
solana-client = "3.0.8"
solana-commitment-config = { version = "3.0.0", default-features = false }
solana-keypair = "3.0.1"
solana-pubkey = "3.0"
spl-token-2022-interface = { version = "2.0.0", default-features = false }
spl-token-interface = { version = "2.0.0", default-features = false }

[patch.crates-io]
