[package]
name = "moneymq-cli"
description = { workspace = true }
readme = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[[bin]]
name = "moneymq"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.51", features = ["derive", "cargo", "env"] }
clap_complete = { version = "4.5.60" }
console = "0.16"
dialoguer = "0.12"
dotenvy = "0.15"
indexmap = { version = "2.12.0", features = ["serde"] }
moneymq-core = { path = "../core" }
moneymq-driver-stripe = { path = "../drivers/stripe" }
moneymq-types = { path = "../types" }
pretty_yaml = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
solana-keypair = { workspace = true }
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing-subscriber = "0.3"
