[package]
name = "moneymq-cli"
description = { workspace = true }
readme = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[[bin]]
name = "moneymq"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.51", features = ["derive", "cargo", "env"] }
clap_complete = { version = "4.5.60" }
console = "0.16"
convert_case.workspace = true
dialoguer = "0.12"
dirs = "5.0"
dotenvy = "0.15"
indexmap = { version = "2.12.0", features = ["serde"] }
indicatif = "0.18.2"
json5 = "0.4"
moneymq-core = { path = "../core" }
moneymq-mcp = { path = "../mcp" }
moneymq-types = { path = "../types" }
pretty_yaml = "0.5.1"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yml = "0.0.12"
sha2 = "0.10"
solana-keypair = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = "0.9"
tracing-subscriber = "0.3"
url = { workspace = true }
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["sqlite", "embedded_validator"]
embedded_validator = ["moneymq-core/embedded_validator"]
sqlite = ["moneymq-core/sqlite"]
