[package]
name = "moneymq-core"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0"
axum = "0.8"
bs58 = "0.5"
moneymq-types = { path = "../types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-keypair = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
tower-http = "0.6.6"
url = "2.5.7"
solana-client = "3.0.8"
kora-lib = { git = "https://github.com/solana-foundation/kora.git", branch = "release/feature-freeze-for-audit" }
surfpool-core = { git = "https://github.com/txtx/surfpool.git", branch = "main" }
