[package]
name = "moneymq-core"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0"
axum = { workspace = true }
bincode = "1.3"
bs58 = "0.5"
chrono = { version = "0.4.42", features = ["serde"] }
indexmap = { version = "2.12.0", features = ["serde"] }
kora-lib = { git = "https://github.com/solana-foundation/kora.git", branch = "release/feature-freeze-for-audit" }
moneymq-types = { path = "../types" }
reqwest = { workspace = true, features = [
    "rustls-tls",
    "json",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
async-stripe = { version = "0.41", default-features = false, features = [
    "runtime-tokio-hyper",
] }
surfpool-core = { git = "https://github.com/txtx/surfpool.git", branch = "main" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.7"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4"] }
base64 = "0.22.1"

# MoneyMQ deps
moneymq-studio-ui = { path = "../studio" }

# Solana deps
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-keypair = { workspace = true }
solana-transaction = "3.0.1"
spl-token-2022-interface = { workspace = true }
spl-token-interface = { workspace = true }
spl-associated-token-account = "8.0.0"

# DB deps
diesel = { version = "2.2.11", default-features = false, features = ["chrono", "time", "serde_json", "uuid", "r2d2"] }
diesel_derives = { version = "2.2.6"}
diesel-dynamic-schema = { version = "0.2.3" }
diesel_migrations = "2.2.0"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"], optional = true }

[features]
default = ["sqlite"]
sqlite = ["diesel/sqlite", "diesel/returning_clauses_for_sqlite_3_35", "diesel_derives/sqlite", "diesel-dynamic-schema/sqlite", "libsqlite3-sys"]
postgres = ["diesel/postgres", "diesel_derives/postgres", "diesel-dynamic-schema/postgres"]
