[package]
name = "moneymq-mcp"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
axum = { version = "0.8", features = ["macros"] }
bs58 = "0.5"
convert_case = { workspace = true }
moneymq-types = { path = "../types" }
moneymq-core = { path = "../core" }
pretty_yaml = "0.5.1"
rmcp = { version = "0.8.0", features = ["server", "macros", "transport-io"] }
# rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "ff71a526156e6c9409c450f71eccd6aced9bc339", package = "rmcp", features = ["transport-io", "transport-sse-server", "server", "schemars"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = "0.0.12"
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }

solana-keypair = { workspace = true }
