[package]
name = "moneymq-mcp"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
axum = { version = "0.8", features = ["macros"] }
bs58 = "0.5"
convert_case = { workspace = true }
indexmap = "2.7"
moneymq-types = { path = "../types", features = ["schemars"] }
moneymq-core = { path = "../core" }
pretty_yaml = "0.5.1"
rmcp = { version = "0.8.0", features = ["server", "macros", "transport-io"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = "0.0.12"
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }

solana-keypair = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
