[package]
name = "moneymq-types"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bs58 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = { workspace = true }
indexmap = { version = "2.12.0", features = ["serde"] }
solana-keypair = { workspace = true }
thiserror = "2.0"
