[package]
name = "moneymq-types"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
url = { workspace = true }
indexmap = { version = "2.12.0", features = ["serde"] }
rand = "0.9"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
thiserror = { workspace = true }
