[package]
name = "moneymq-types"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
url = { workspace = true }
indexmap = { version = "2.12.0", features = ["serde"] }
rand = "0.9"
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yml = { workspace = true }
sha2 = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
spl-token-interface = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
schemars = ["dep:schemars"]
