[package]
name = "moneymq-driver-stripe"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-stripe = { version = "0.40", default-features = false, features = ["runtime-tokio-hyper"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
bs58 = "0.5"
sha2 = "0.10"
moneymq-types = { path = "../../types" }
