[package]
name = "moneymq-driver-stripe"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-stripe = { version = "0.40", default-features = false, features = ["runtime-tokio-hyper"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = "1.0"
chrono = "0.4"
bs58 = "0.5"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
moneymq-types = { path = "../../types" }
indexmap = { version = "2.12.0", features = ["serde"] }
